<resources>
    <string name="app_name">Robô Marciano Android</string>

    <string name="main_title">Robô Marciano</string>
    <string name="main_subtitle">Envie uma mensagem e converse com o robô</string>
    <string name="main_robot_image_description">Imagem representando o Robô Marciano</string>

    <string name="label_robot_type">Tipo do robô</string>
    <string name="label_message">Mensagem</string>
    <string name="hint_message">Digite sua mensagem para o robô</string>
    <string name="button_send_message">Enviar mensagem</string>

    <string name="robot_type_basic">Robô Básico</string>
    <string name="robot_type_advanced">Robô Avançado</string>
    <string name="robot_type_premium">Robô Premium</string>

    <string name="validation_empty_message">Digite uma mensagem antes de enviar.</string>

    <string name="answer_title">Resposta do Robô</string>
    <string name="answer_robot_type">Tipo do robô: %1$s</string>
    <string name="answer_user_message">Mensagem enviada: %1$s</string>
    <string name="answer_label_robot_response">Resposta do robô</string>
    <string name="button_back">Voltar</string>

    <string name="answer_intro">O Robô Marciano analisou sua mensagem e respondeu:</string>
    <string name="answer_user_message_label">Sua mensagem</string>
    <string name="answer_robot_message_label">Resposta do robô</string>
    <string name="empty_message_display">Mensagem vazia</string>
</resources>